service.app.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: "2023-01-24T18:53:50Z"
  name: service-app
  namespace: poc-deploy-canary
  resourceVersion: "5437734"
  uid: da12c1ba-7379-43f1-9993-f7d6e76890f1
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: app
    version: "1.0"
  sessionAffinity: None
  type: ClusterIP
