route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: route-app
  namespace: poc-deploy-canary
spec:
  alternateBackends:
  - kind: Service
    name: service-app-canary
    weight: 10
  host: app-poc-deploy-canary.apps.oc-dev.ovd.com.br
  port:
    targetPort: 80
  to:
    kind: Service
    name: service-app
    weight: 90
